--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,9 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
+# Lock files
+yarn.lock
+
 # dotenv environment variables file
 .env
 .env.test
